<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Betrayal Character Stats</string>
    <string name="reorder_name">Re-Order Characters</string>
    
    <string name="menu_reset">Reset Current Character</string>
    <string name="menu_reset_short">Reset</string>
    <string name="menu_flip">Flip Current Character</string>
    <string name="menu_flip_short">Flip</string>
    <string name="menu_re_order">Re-Order Characters</string>
    <string name="menu_re_order_short">Re-Order</string>
    <string name="menu_reset_order">Reset</string>
    <string name="menu_reset_order_short">Reset</string>
    
    <string name="dscr_character">Character</string>
    <string name="dscr_pins">Pins</string>
    <string name="dscr_speed_pin">Speed Pin</string>
    <string name="dscr_might_pin">Might Pin</string>
    <string name="dscr_sanity_pin">Sanity Pin</string>
    <string name="dscr_knowledge_pin">Knowledge Pin</string>
    
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="flip">Flip</string>
    
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="lbs">lbs.</string>
    <string name="hobbies">Hobbies:</string>
    <string name="birthday">Birthday:</string>
    <string name="speed">Speed:</string>
    <string name="might">Might:</string>
    <string name="sanity">Sanity:</string>
    <string name="knowledge">Knowledge:</string>
    
	<string name="height_blue_madame_zostra">5\'0\"</string>
	<string name="height_blue_vivian_lopez">5\'5\"</string>
	<string name="height_green_brandon_jaspers">5\'1\"</string>
	<string name="height_green_peter_akimoto">4\'11\"</string>
	<string name="height_purple_heather_granville">5\'2\"</string>
	<string name="height_purple_jenny_leclerc">5\'7\"</string>
	<string name="height_red_darrin_flash_williams">5\'11\"</string>
	<string name="height_red_ox_bellows">6\'4\"</string>
	<string name="height_white_father_rhinehardt">5\'9\"</string>
	<string name="height_white_professor_longfellow">5\'11\"</string>
	<string name="height_yellow_missy_dubourde">4\'2\"</string>
	<string name="height_yellow_zoe_ingstrom">3\'9\"</string>
	
	<string name="hobbies_blue_madame_zostra">Astrology, Cooking, Baseball</string>
	<string name="hobbies_blue_vivian_lopez">Old Movies, Horses</string>
	<string name="hobbies_green_brandon_jaspers">Computers, Camping, Hockey</string>
	<string name="hobbies_green_peter_akimoto">Bugs, Basketball</string>
	<string name="hobbies_purple_heather_granville">Television, Shopping</string>
	<string name="hobbies_purple_jenny_leclerc">Reading, Soccer</string>
	<string name="hobbies_red_darrin_flash_williams">Track, Music, Shakespearean Literature</string>
	<string name="hobbies_red_ox_bellows">Football, Shiny Objects</string>
	<string name="hobbies_white_father_rhinehardt">Fencing, Gardening</string>
	<string name="hobbies_white_professor_longfellow">Gaelic Music, Drama, Fine Wines</string>
	<string name="hobbies_yellow_missy_dubourde">Swimming, Medicine</string>
	<string name="hobbies_yellow_zoe_ingstrom">Dolls, Music</string>

	<string name="birthday_blue_madame_zostra">December 10th</string>
	<string name="birthday_blue_vivian_lopez">January 11th</string>
	<string name="birthday_green_brandon_jaspers">May 21st</string>
	<string name="birthday_green_peter_akimoto">September 3rd</string>
	<string name="birthday_purple_heather_granville">August 2nd</string>
	<string name="birthday_purple_jenny_leclerc">March 4th</string>
	<string name="birthday_red_darrin_flash_williams">June 6th</string>
	<string name="birthday_red_ox_bellows">October 18th</string>
	<string name="birthday_white_father_rhinehardt">April 26th</string>
	<string name="birthday_white_professor_longfellow">July 27th</string>
	<string name="birthday_yellow_missy_dubourde">February 14th</string>
	<string name="birthday_yellow_zoe_ingstrom">November 5th</string>
	
</resources>
